src/objects/Apttus_DealMgr__DealSummaryGroup__c.object
<CustomObject>
    <description>Represents a summary of deal line items</description>
    <fields>
        <fullName>Apttus_DealMgr__AdditionalDiscount__c</fullName>
        <description>Additional discount for the group</description>
        <inlineHelpText>Additional discount for the group</inlineHelpText>
        <label>Additional Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__AdjustedPrice__c</fullName>
        <description>The total adjusted price for the group (includes auto adjustments)</description>
        <inlineHelpText>The total adjusted price for the group (includes auto adjustments)</inlineHelpText>
        <label>Adjusted Price (Deprecated)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ChargeType__c</fullName>
        <description>The charge type associated with the summary</description>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Price</fullName>
                </value>
                <value>
                    <fullName>License Fee</fullName>
                </value>
                <value>
                    <fullName>Subscription Fee</fullName>
                </value>
                <value>
                    <fullName>Implementation Fee</fullName>
                </value>
                <value>
                    <fullName>Installation Fee</fullName>
                </value>
                <value>
                    <fullName>Maintenance Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__DealId__c</fullName>
        <description>ID of the associated deal</description>
        <inlineHelpText>ID of the associated deal</inlineHelpText>
        <label>Deal</label>
        <referenceTo>Apttus_DealMgr__Deal__c</referenceTo>
        <relationshipLabel>Deal Summary Groups</relationshipLabel>
        <relationshipName>Deal_Summary_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ExtendedListPrice__c</fullName>
        <description>The extended list price for the group</description>
        <label>Extended List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ExtendedPrice__c</fullName>
        <description>The total extended price for the group</description>
        <inlineHelpText>The total extended price for the group</inlineHelpText>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__GroupName__c</fullName>
        <description>The name of the summary group</description>
        <inlineHelpText>The name of the summary group</inlineHelpText>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__LineNumber__c</fullName>
        <description>The line number</description>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ListPrice__c</fullName>
        <description>The total list price for the group</description>
        <inlineHelpText>The total list price for the group</inlineHelpText>
        <label>List Price (Deprecated)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__NetPrice__c</fullName>
        <description>The total net price for the group</description>
        <inlineHelpText>The total net price for the group</inlineHelpText>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_DealMgr__ProductFamily__c</fullName>
        <description>The product family</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Deal Summary Group</label>
    <nameField>
        <displayFormat>DS-{0000000000}</displayFormat>
        <label>Group Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Summary Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>